// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`behavior.utils OverflowBehavior render menu should manage resize with observer, case 50 1`] = `
<mg-menu aria-label="batman" direction="horizontal" role="list">
  <template shadowrootmode="open">
    <slot></slot>
  </template>
  <mg-menu-item data-overflow-base-index="0" data-style-direction="horizontal" identifier="identifier-1" role="listitem" status="visible">
    <template shadowrootmode="open">
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-medium mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </template>
    <span slot="label" title="Batman">
      Batman
    </span>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="1" data-style-direction="horizontal" hidden="" identifier="identifier-2" role="listitem" status="visible">
    <template shadowrootmode="open">
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-medium mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </template>
    <span slot="label" title="Joker">
      Joker
    </span>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="2" data-style-direction="horizontal" hidden="" identifier="identifier-3" role="listitem" status="visible">
    <template shadowrootmode="open">
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-medium mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </template>
    <span slot="label" title="Bane">
      Bane
    </span>
  </mg-menu-item>
  <mg-item-more role="listitem">
    <template shadowrootmode="open">
      <mg-menu-item data-overflow-more data-size="medium" data-style-direction="horizontal" identifier="mg-item-more" role="presentation" status="visible">
        <template shadowrootmode="open">
          <mg-popover arrowhide="" data-fallback-placement="bottom-end" identifier="mg-item-more-popover" placement="bottom-start">
            <button aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-medium mg-c-menu-item__navigation-button--visible">
              <slot name="image"></slot>
              <div class="mg-c-menu-item__navigation-button-center">
                <div class="mg-c-menu-item__navigation-button-text-content">
                  <slot name="label"></slot>
                  <slot name="information"></slot>
                </div>
              </div>
              <span class="mg-c-menu-item__navigation-button-chevron">
                <mg-icon icon="chevron-down" size="small"></mg-icon>
              </span>
            </button>
            <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" slot="content">
              <slot></slot>
            </div>
          </mg-popover>
        </template>
        <mg-icon icon="ellipsis-vertical" slot="image"></mg-icon>
        <span class="mg-u-visually-hidden" slot="label" title="Additional menu">
          Additional menu
        </span>
        <mg-menu aria-label="Additional menu" direction="vertical" role="list">
          <template shadowrootmode="open">
            <slot></slot>
          </template>
          <mg-menu-item data-overflow-proxy-index="0" data-style-direction="vertical" hidden="" identifier="identifier-1" role="listitem" status="visible">
            <template shadowrootmode="open">
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-medium mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </template>
            <span slot="label" title="Batman">
              Batman
            </span>
          </mg-menu-item>
          <mg-menu-item data-overflow-proxy-index="1" data-style-direction="vertical" identifier="identifier-2" role="listitem" status="visible">
            <template shadowrootmode="open">
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-medium mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </template>
            <span slot="label" title="Joker">
              Joker
            </span>
          </mg-menu-item>
          <mg-menu-item data-overflow-proxy-index="2" data-style-direction="vertical" identifier="identifier-3" role="listitem" status="visible">
            <template shadowrootmode="open">
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-medium mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </template>
            <span slot="label" title="Bane">
              Bane
            </span>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
    </template>
  </mg-item-more>
</mg-menu>
`;

exports[`behavior.utils OverflowBehavior render menu should manage resize with observer, case 80 1`] = `
<mg-menu aria-label="batman" direction="horizontal" role="list">
  <template shadowrootmode="open">
    <slot></slot>
  </template>
  <mg-menu-item data-overflow-base-index="0" data-style-direction="horizontal" identifier="identifier-1" role="listitem" status="visible">
    <template shadowrootmode="open">
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-medium mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </template>
    <span slot="label" title="Batman">
      Batman
    </span>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="1" data-style-direction="horizontal" hidden="" identifier="identifier-2" role="listitem" status="visible">
    <template shadowrootmode="open">
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-medium mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </template>
    <span slot="label" title="Joker">
      Joker
    </span>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="2" data-style-direction="horizontal" hidden="" identifier="identifier-3" role="listitem" status="visible">
    <template shadowrootmode="open">
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-medium mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </template>
    <span slot="label" title="Bane">
      Bane
    </span>
  </mg-menu-item>
  <mg-item-more role="listitem">
    <template shadowrootmode="open">
      <mg-menu-item data-overflow-more data-size="medium" data-style-direction="horizontal" identifier="mg-item-more" role="presentation" status="visible">
        <template shadowrootmode="open">
          <mg-popover arrowhide="" data-fallback-placement="bottom-end" identifier="mg-item-more-popover" placement="bottom-start">
            <button aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-medium mg-c-menu-item__navigation-button--visible">
              <slot name="image"></slot>
              <div class="mg-c-menu-item__navigation-button-center">
                <div class="mg-c-menu-item__navigation-button-text-content">
                  <slot name="label"></slot>
                  <slot name="information"></slot>
                </div>
              </div>
              <span class="mg-c-menu-item__navigation-button-chevron">
                <mg-icon icon="chevron-down" size="small"></mg-icon>
              </span>
            </button>
            <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" slot="content">
              <slot></slot>
            </div>
          </mg-popover>
        </template>
        <mg-icon icon="ellipsis-vertical" slot="image"></mg-icon>
        <span class="mg-u-visually-hidden" slot="label" title="Additional menu">
          Additional menu
        </span>
        <mg-menu aria-label="Additional menu" direction="vertical" role="list">
          <template shadowrootmode="open">
            <slot></slot>
          </template>
          <mg-menu-item data-overflow-proxy-index="0" data-style-direction="vertical" hidden="" identifier="identifier-1" role="listitem" status="visible">
            <template shadowrootmode="open">
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-medium mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </template>
            <span slot="label" title="Batman">
              Batman
            </span>
          </mg-menu-item>
          <mg-menu-item data-overflow-proxy-index="1" data-style-direction="vertical" identifier="identifier-2" role="listitem" status="visible">
            <template shadowrootmode="open">
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-medium mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </template>
            <span slot="label" title="Joker">
              Joker
            </span>
          </mg-menu-item>
          <mg-menu-item data-overflow-proxy-index="2" data-style-direction="vertical" identifier="identifier-3" role="listitem" status="visible">
            <template shadowrootmode="open">
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-medium mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </template>
            <span slot="label" title="Bane">
              Bane
            </span>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
    </template>
  </mg-item-more>
</mg-menu>
`;

exports[`behavior.utils OverflowBehavior render menu should manage resize with observer, case 100 1`] = `
<mg-menu aria-label="batman" direction="horizontal" role="list">
  <template shadowrootmode="open">
    <slot></slot>
  </template>
  <mg-menu-item data-overflow-base-index="0" data-style-direction="horizontal" identifier="identifier-1" role="listitem" status="visible">
    <template shadowrootmode="open">
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-medium mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </template>
    <span slot="label" title="Batman">
      Batman
    </span>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="1" data-style-direction="horizontal" hidden="" identifier="identifier-2" role="listitem" status="visible">
    <template shadowrootmode="open">
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-medium mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </template>
    <span slot="label" title="Joker">
      Joker
    </span>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="2" data-style-direction="horizontal" hidden="" identifier="identifier-3" role="listitem" status="visible">
    <template shadowrootmode="open">
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-medium mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </template>
    <span slot="label" title="Bane">
      Bane
    </span>
  </mg-menu-item>
  <mg-item-more role="listitem">
    <template shadowrootmode="open">
      <mg-menu-item data-overflow-more data-size="medium" data-style-direction="horizontal" identifier="mg-item-more" role="presentation" status="visible">
        <template shadowrootmode="open">
          <mg-popover arrowhide="" data-fallback-placement="bottom-end" identifier="mg-item-more-popover" placement="bottom-start">
            <button aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-medium mg-c-menu-item__navigation-button--visible">
              <slot name="image"></slot>
              <div class="mg-c-menu-item__navigation-button-center">
                <div class="mg-c-menu-item__navigation-button-text-content">
                  <slot name="label"></slot>
                  <slot name="information"></slot>
                </div>
              </div>
              <span class="mg-c-menu-item__navigation-button-chevron">
                <mg-icon icon="chevron-down" size="small"></mg-icon>
              </span>
            </button>
            <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" slot="content">
              <slot></slot>
            </div>
          </mg-popover>
        </template>
        <mg-icon icon="ellipsis-vertical" slot="image"></mg-icon>
        <span class="mg-u-visually-hidden" slot="label" title="Additional menu">
          Additional menu
        </span>
        <mg-menu aria-label="Additional menu" direction="vertical" role="list">
          <template shadowrootmode="open">
            <slot></slot>
          </template>
          <mg-menu-item data-overflow-proxy-index="0" data-style-direction="vertical" hidden="" identifier="identifier-1" role="listitem" status="visible">
            <template shadowrootmode="open">
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-medium mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </template>
            <span slot="label" title="Batman">
              Batman
            </span>
          </mg-menu-item>
          <mg-menu-item data-overflow-proxy-index="1" data-style-direction="vertical" identifier="identifier-2" role="listitem" status="visible">
            <template shadowrootmode="open">
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-medium mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </template>
            <span slot="label" title="Joker">
              Joker
            </span>
          </mg-menu-item>
          <mg-menu-item data-overflow-proxy-index="2" data-style-direction="vertical" identifier="identifier-3" role="listitem" status="visible">
            <template shadowrootmode="open">
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-medium mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </template>
            <span slot="label" title="Bane">
              Bane
            </span>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
    </template>
  </mg-item-more>
</mg-menu>
`;

exports[`behavior.utils OverflowBehavior render menu should manage resize with observer, case 250 1`] = `
<mg-menu aria-label="batman" direction="horizontal" role="list">
  <template shadowrootmode="open">
    <slot></slot>
  </template>
  <mg-menu-item data-overflow-base-index="0" data-style-direction="horizontal" identifier="identifier-1" role="listitem" status="visible">
    <template shadowrootmode="open">
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-medium mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </template>
    <span slot="label" title="Batman">
      Batman
    </span>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="1" data-style-direction="horizontal" identifier="identifier-2" role="listitem" status="visible">
    <template shadowrootmode="open">
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-medium mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </template>
    <span slot="label" title="Joker">
      Joker
    </span>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="2" data-style-direction="horizontal" identifier="identifier-3" role="listitem" status="visible">
    <template shadowrootmode="open">
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-medium mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </template>
    <span slot="label" title="Bane">
      Bane
    </span>
  </mg-menu-item>
  <mg-item-more hidden="" role="listitem">
    <template shadowrootmode="open">
      <mg-menu-item data-overflow-more data-size="medium" data-style-direction="horizontal" identifier="mg-item-more" role="presentation" status="visible">
        <template shadowrootmode="open">
          <mg-popover arrowhide="" data-fallback-placement="bottom-end" identifier="mg-item-more-popover" placement="bottom-start">
            <button aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-medium mg-c-menu-item__navigation-button--visible">
              <slot name="image"></slot>
              <div class="mg-c-menu-item__navigation-button-center">
                <div class="mg-c-menu-item__navigation-button-text-content">
                  <slot name="label"></slot>
                  <slot name="information"></slot>
                </div>
              </div>
              <span class="mg-c-menu-item__navigation-button-chevron">
                <mg-icon icon="chevron-down" size="small"></mg-icon>
              </span>
            </button>
            <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" slot="content">
              <slot></slot>
            </div>
          </mg-popover>
        </template>
        <mg-icon icon="ellipsis-vertical" slot="image"></mg-icon>
        <span class="mg-u-visually-hidden" slot="label" title="Additional menu">
          Additional menu
        </span>
        <mg-menu aria-label="Additional menu" direction="vertical" role="list">
          <template shadowrootmode="open">
            <slot></slot>
          </template>
          <mg-menu-item data-overflow-proxy-index="0" data-style-direction="vertical" hidden="" identifier="identifier-1" role="listitem" status="visible">
            <template shadowrootmode="open">
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-medium mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </template>
            <span slot="label" title="Batman">
              Batman
            </span>
          </mg-menu-item>
          <mg-menu-item data-overflow-proxy-index="1" data-style-direction="vertical" hidden="" identifier="identifier-2" role="listitem" status="visible">
            <template shadowrootmode="open">
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-medium mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </template>
            <span slot="label" title="Joker">
              Joker
            </span>
          </mg-menu-item>
          <mg-menu-item data-overflow-proxy-index="2" data-style-direction="vertical" hidden="" identifier="identifier-3" role="listitem" status="visible">
            <template shadowrootmode="open">
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-medium mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </template>
            <span slot="label" title="Bane">
              Bane
            </span>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
    </template>
  </mg-item-more>
</mg-menu>
`;
